--- a/login/index.html
+++ b/login/index.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>LOGIN</title>
 </head>
 <body>
   <main>
     <section class="caja-login">
       <h1>Ingresa a Zafary</h1>
       <form class="formulario-login">
-        <input type="text" placeholder="Nombre de Usuario" id="email" >
-        <input type="password" placeholder="Contraseña" id="password" >
-        <button type="button" id="boton" >LOGIN</button>
+        <input id="InpUsername" type="text" placeholder="Nombre de Usuario"  >
+        <input id="InpPassword" type="password" placeholder="Contraseña" >
+        <button id="btnLogin" type="button">LOGIN</button>
+        <small class="error" id="msgerror"></small>
         <small> Yo ❤️ Zafary</small>
       </form>
     </section>
